<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- Creamos la pantalla de inicio (destino) -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.habittrackerapp.ui.HomeFragment"
        android:label="@string/nav_home" />
    <!-- Creamos la pantalla de hábitos (destino) -->
    <fragment
        android:id="@+id/nav_habits"
        android:name="com.example.habittrackerapp.ui.HabitsFragment"
        android:label="@string/nav_habits" />
    <!-- Creamos la pantalla de categorías (destino) -->
    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.habittrackerapp.ui.CategoriesFragment"
        android:label="@string/nav_categories" />
    <!-- Creamos la pantalla de perfil (destino) -->
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.habittrackerapp.ui.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
